--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "pretty": true,
     "sourceMap": true,
     "declaration": true,
-    "outDir": "dist",
+    "outDir": "build",
     "allowJs": true,
     "noEmit": false,
     "esModuleInterop": true,
