--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,8 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"],
-      "@config": ["config"],
       "@controllers/*": ["controllers/*"],
-      "@databases": ["databases"],
+      "@databases/*": ["databases/*"],
       "@dtos/*": ["dtos/*"],
       "@exceptions/*": ["exceptions/*"],
       "@interfaces/*": ["interfaces/*"],
