--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "scripts": {
     "start": "npm run build && cross-env NODE_ENV=production node build/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
-    "build": "npm i --save-dev tsc-alias && tsc && tsc-alias",
+    "build": "rimraf build && tsc && tsc-alias",
+    "typecheck": "tsc --project tsconfig.json",
     "test": "jest --forceExit --detectOpenHandles",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "lint:fix": "npm run lint -- --fix",
     "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
+  "pre-commit": [
+    "typecheck",
+    "build"
+  ],
   "dependencies": {
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -63,11 +68,13 @@
     "node-gyp": "^9.1.0",
     "nodemon": "^2.0.19",
     "pm2": "^5.2.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^2.7.1",
+    "rimraf": "^4.2.0",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
-    "tsc-alias": "^1.7.0",
+    "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
   }
