--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "npm run build && cross-env NODE_ENV=production node build/server.js",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
-    "build": "rimraf build && tsc && tsc-alias",
+    "build": "rimraf dist && tsc && tsc-alias",
     "typecheck": "tsc --project tsconfig.json",
     "test": "jest --forceExit --detectOpenHandles",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
