--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,25 @@
 {
     "version": 2,
+    "public": true,
     "builds": [
         {
-            "src": "dist/server.js",
+            "src": "src/server.ts",
             "use": "@vercel/node",
             "config": { "includeFiles": ["dist/**"] }
         }
     ],
     "routes": [
         {
+            "src": "/robots.txt",
+            "status": 204
+        },
+        {
+            "src": "/favicon.ico",
+            "status": 204
+        },
+        {
             "src": "/(.*)",
-            "dest": "dist/server.js"
+            "dest": "/src/server.ts"
         }
     ]
 }
