--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
