--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "deploy": "git push heroku1 master:main && git push heroku2 master:main && git push heroku3 master:main"
   },
   "dependencies": {
     "axios": "^1.3.4",
